[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/MenuScreen/MenuScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/menuscreen/TITLE_SCREEN.png" type="Texture" id=2]
[ext_resource path="res://font1/Android 101.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://font1/NIKOLETA.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 39
outline_size = 3
outline_color = Color( 0, 0.901961, 0.839216, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 4
anchor_left = 0.5
anchor_right = 0.5
margin_left = -361.0
margin_top = 2.0
margin_right = 359.0
margin_bottom = 437.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
expand = true

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Buttons"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 16.0

[node name="CenterContainer" type="CenterContainer" parent="Buttons/NinePatchRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -204.214
margin_top = -19.1527
margin_right = -204.214
margin_bottom = 52.8473

[node name="newgame" type="ToolButton" parent="Buttons/NinePatchRect/CenterContainer"]
margin_left = 233.0
margin_top = 12.0
margin_right = 486.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.709804, 0.709804, 0.709804, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "NEW GAME"
align = 0

[node name="CenterContainer2" type="CenterContainer" parent="Buttons/NinePatchRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -217.354
margin_top = 47.368
margin_right = -217.354
margin_bottom = 119.368

[node name="continue" type="ToolButton" parent="Buttons/NinePatchRect/CenterContainer2"]
margin_left = 250.0
margin_top = 12.0
margin_right = 469.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.709804, 0.709804, 0.709804, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CONtiNUE"
align = 0

[node name="CenterContainer4" type="CenterContainer" parent="Buttons/NinePatchRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -242.822
margin_top = 111.857
margin_right = -242.822
margin_bottom = 183.857

[node name="menu" type="ToolButton" parent="Buttons/NinePatchRect/CenterContainer4"]
margin_left = 281.0
margin_top = 11.0
margin_right = 438.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.709804, 0.709804, 0.709804, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "LEVEL"
align = 0

[node name="CenterContainer3" type="CenterContainer" parent="Buttons/NinePatchRect"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 0.671768
margin_top = 147.907
margin_right = 0.671753
margin_bottom = 219.907

[node name="Label" type="Label" parent="Buttons/NinePatchRect/CenterContainer3"]
margin_left = 323.0
margin_top = 27.0
margin_right = 396.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "VERSION 1.0"
[connection signal="pressed" from="Buttons/NinePatchRect/CenterContainer/newgame" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="Buttons/NinePatchRect/CenterContainer2/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Buttons/NinePatchRect/CenterContainer4/menu" to="." method="_on_menu_pressed"]
